# Tea-monitor-system

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
.qtcreator/: CMakeLists.txt.user.8ba0c85
core/: camera_interface.h  camera_service.cpp  camera_service.h  spectrometer_interface.h  spectrometer_service.cpp  spectrometer_service.h
